[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-test-generation"
version = "0.1.0"
description = "LLM-based test case generation and evaluation"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "mutmut>=2.4.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Add the repo root (parent of impl/) to sys.path so that
# "from impl.cut.<module> import *" resolves when running pytest directly.
pythonpath = [".."]

[tool.setuptools.packages.find]
where = [".."]
include = ["impl*"]

